--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     background: white;
 }
 
-
 #pageHeader{
     background: dodgerblue;
     font-size: 70pt;
@@ -59,6 +58,14 @@ h1{
     font-family: "Times New Roman", monospace;
 }
 
+#lyricsOutput{
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    font-size: 40pt;
+    font-family: "Times New Roman", monospace;
+}
+
 #firstOption{
     position: absolute;
     top: 59%;
@@ -105,5 +112,59 @@ h1{
     border: solid thick black;
     color: gold;
     font-size: 40pt;
+    font-family: "Times New Roman", monospace;
+}
+
+#winMessage{
+    position: absolute;
+    top: 15%;
+    left: 12%;
+    font-size:40pt;
+    font-family: "Times New Roman", monospace;
+}
+#loseMessage{
+    position: absolute;
+    top: 15%;
+    left: 19%;
+    font-size: 50pt;
+    font-family: "Times New Roman", monospace;
+}
+#loseMessage2{
+    position: absolute;
+    top: 19%;
+    left: 16%;
+    font-size: 50pt;
+    font-family: "Times New Roman", monospace;
+}
+#songName{
+    position: absolute;
+    top: 27%;
+    left: 30%;
+    font-size: 70pt;
+    font-family: "Times New Roman", monospace;
+}
+
+#nextSong3{
+    position: absolute;
+    top: 45%;
+    left: 23%;
+    height: 300px;
+    width: 500px;
+    background-color: darkgreen;
+    border: solid thick black;
+    color: gold;
+    font-size: 50pt;
+    font-family: "Times New Roman", monospace;
+}
+#nextSong4{
+    position: absolute;
+    top: 45%;
+    left: 23%;
+    height: 300px;
+    width: 500px;
+    background-color: darkgreen;
+    border: solid thick black;
+    color: gold;
+    font-size: 50pt;
     font-family: "Times New Roman", monospace;
 }
