--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,8 @@ h1{
 #lyricsOutput{
     position: absolute;
     top: 25%;
-    left: 25%;
+    left: 5%;
+    text-align: center;
     font-size: 40pt;
     font-family: "Times New Roman", monospace;
 }
